# notes-backend

./: .dockerIgnore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  api.sh  base_tests_factory.py  conftest.py  docker-compose.yml  logging.yaml  main.py  pyproject.toml  requirements.txt  seed.sh  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1978c3edbefb_create_user_and_notes_table.py  2923a528cd73_add_note_state_column.py  4dd69d034ded_create_notes_model.py  a15e562c82fd_added_notes_and_user_tables.py  b3d2819a2887_add_required_columns.py  ca0d53ad8eb3_create_notes_table.py
app/: db.py
app/api/: crud.py  models.py  notes.py
apps/notes/: crud.py  models.py  notes.py  notes_schema.py  notes_view.py  schema.py
apps/users/: crud.py  models.py  users_schema.py  users_view.py
db/: __init__.py  base.py  session.py
helpers/: logger.py  utils.py
iac/: cluster.tf  main.tf  manifest.tf  project.tf  registry.tf  versions.tf  vpc.tf
iac/aws/: 01.terraform.tf  02.main.tf  02.providers.tf  03.cluster.tf  04.database.tf  05.registry.tf  06.vpc.tf  07.outputs.tf  08.vars.tf  09.data.tf  09.loadbalancer.tf  10.karpenter.tf  cluster.tf  main.tf  outputs.tf  registry.tf  vars.tf  vpc.tf
iac/do/: manifest.tf  project.tf  providers.tf  registry.tf  versions.tf
iac/pulumi/: Pulumi.yaml
k8s/local/: cluster.yml  deployment.yml  local-ingress.yml  local-notes-api.yml  notes-api.yml  values.yml
k8s/remote/: 01.jobs.yaml  (+11 more)
load-testing/: script.js  seed.sh
scripts/: pg_init.sql
tests/: test_notes.py
(+6 files in other folders)
